Created loadUserFilesList controller method - pageable by page-number, added findByUserId in FileRepository, implemented loadAll with pageNumber, added accurate ExceptionHandlers, created custom DTO class LoadAllFileResponseDTO, adaptation StorageService interface.